tests/baselines/reference/asyncMethod23.errors.txt
tests/cases/conformance/async/downlevel/asyncMethod/asyncMethod23.ts(7,13): error TS2371: A parameter initializer is only allowed in a function or constructor implementation.
tests/cases/conformance/async/downlevel/asyncMethod/asyncMethod23.ts(7,23): error TS1109: Expression expected.
tests/cases/conformance/async/downlevel/asyncMethod/asyncMethod23.ts(7,26): error TS2304: Cannot find name 'await'.
tests/cases/conformance/async/downlevel/asyncMethod/asyncMethod23.ts(7,31): error TS1005: ';' expected.
tests/cases/conformance/async/downlevel/asyncMethod/asyncMethod23.ts(7,32): error TS1128: Declaration or statement expected.
tests/cases/conformance/async/downlevel/asyncMethod/asyncMethod23.ts(7,46): error TS1109: Expression expected.
tests/cases/conformance/async/downlevel/asyncMethod/asyncMethod23.ts(9,1): error TS1128: Declaration or statement expected.


==== tests/cases/conformance/async/downlevel/asyncMethod/asyncMethod23.ts (7 errors) ====
    declare class Promise<T> {
        constructor(init: (resolve: (value?: T | IPromise<T>) => void, reject: (reason?: any) => void) => void);
        then<TResult>(onfulfilled?: (value: T) => TResult | IPromise<TResult>, onrejected?: (reason: any) => TResult | IPromise<TResult>): Promise<TResult>;
    }
    
    var o = {
      async foo(a = await => await): Promise<void> {
                ~~~~~~~~~
!!! error TS2371: A parameter initializer is only allowed in a function or constructor implementation.
                          ~~
!!! error TS1109: Expression expected.
                             ~~~~~
!!! error TS2304: Cannot find name 'await'.
                                  ~
!!! error TS1005: ';' expected.
                                   ~
!!! error TS1128: Declaration or statement expected.
                                                 ~
!!! error TS1109: Expression expected.
      }
    }
    ~
!!! error TS1128: Declaration or statement expected.